--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -52,7 +52,7 @@
 
 \title{Obtaining and Cleaning NOAA Weather Station Data}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.4)}
+\date{\today~(ver. 0.75)}
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
 \begin{document}
 \maketitle
@@ -65,7 +65,7 @@ Using a list of active weather stations in the United States, you  will download
 
 \subsection{Read Data}
 
-First, we install some packages and read in the data.
+First, we install some packages and read in the data. I suggest you create a folder for the project (I created one called "04\_Regional\_Climate\_Trends") and then used the function here() to get the working directory and read the csv into R. This might be easier than the file.choose() option, but you can use that if you prefer.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
@@ -79,10 +79,32 @@ First, we install some packages and read in the data.
 
 \hlstd{stations.active.oldest} \hlkwb{=} \hlkwd{read.csv}\hlstd{(}
   \hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{,} \hlstr{"stations.active.oldest.csv"}\hlstd{))}
+
+\hlcom{# OR}
+\hlcom{# use file.choose() to select the file}
+\hlcom{# filename = "MY.PATH/04_Regional_Climate_Trends/stations.active.oldest.csv"}
+\hlcom{# stations.active.oldest = read.csv(filename)}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
 
+
+\subsection{Map US Weather Stations}
+
+Here's a map of the weather stations in the dataset. Pretty lame map!  We'll make a better one later.\footnote{Evelyn/Brody: This is a good change to see how to use R for map making! First we need to transform that data.}
+
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{plot}\hlstd{(stations.active.oldest}\hlopt{$}\hlstd{LONGITUDE,}
+     \hlstd{stations.active.oldest}\hlopt{$}\hlstd{LATITUDE,}
+     \hlkwc{xlab} \hlstd{=} \hlstr{"Longitude"}\hlstd{,}\hlkwc{ylab} \hlstd{=} \hlstr{"Latitude"}\hlstd{,}
+     \hlkwc{pch}\hlstd{=}\hlnum{20}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{0.3}\hlstd{,} \hlkwc{col}\hlstd{=}\hlstr{'gray60'}\hlstd{,} \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,}
+     \hlkwc{main} \hlstd{=} \hlstr{"US Weather Stations"}\hlstd{)}
+\end{alltt}
+\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-2-1} 
+\end{knitrout}
 \subsection{Select and Evaluate State Data}
 
 \begin{knitrout}
@@ -108,13 +130,13 @@ The each of you will select a state -- see the Google Sheet sign up so we have a
 
 \section{Download Data from NOAA}
 
-\subsection{Function to Download Data}
+\subsection{Subset Station Data by State}
 
 This uses the stations.active.oldest file to download the data from the NOAA website based on the state you have choose.
+
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{# Select Stations in State}
 \hlstd{my.stations} \hlkwb{=} \hlkwd{subset}\hlstd{(stations.active.oldest, STATE} \hlopt{==} \hlstd{my.state)}
 
 \hlcom{# Download Updated Station Data}
@@ -124,8 +146,14 @@ This uses the stations.active.oldest file to download the data from the NOAA web
 \begin{verbatim}
 ## [1] "/home/mwl04747/RTricks/04_Regional_Climate_Trends/USC00043157"
 \end{verbatim}
+\end{kframe}
+\end{knitrout}
+
+
+The loop is not ideal -- loops are slow in R and prone to break -- but it should work for our purposes.\footnote{Evelyn/Brody: I wonder if we can test if the file exists so we don't have to downwload every time!} 
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
-\hlcom{#station = data.frame(NULL)}
 \hlkwa{for}\hlstd{(i} \hlkwa{in} \hlnum{1}\hlopt{:}\hlkwd{nrow}\hlstd{(my.stations))\{}
   \hlstd{url} \hlkwb{=} \hlkwd{paste0}\hlstd{(}\hlstr{"https://www.ncei.noaa.gov/pub/data/ghcn/daily/by_station/"}\hlstd{,}
                \hlstd{my.stations}\hlopt{$}\hlstd{ID[i],}
@@ -139,13 +167,16 @@ This uses the stations.active.oldest file to download the data from the NOAA web
                           \hlstr{".csv.gz"}\hlstd{),}
               \hlkwc{quiet} \hlstd{=} \hlnum{FALSE}\hlstd{,} \hlkwc{mode} \hlstd{=} \hlstr{"w"}\hlstd{,} \hlkwc{cacheOK} \hlstd{=} \hlnum{TRUE}\hlstd{)}
 
-\hlkwd{assign}\hlstd{(}\hlkwd{paste0}\hlstd{(}\hlstr{"station"}\hlstd{, i),} \hlkwd{read.csv}\hlstd{(}\hlkwd{gzfile}\hlstd{(}\hlkwd{paste0}\hlstd{(here}\hlopt{::}\hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{,} \hlstr{"Data"}\hlstd{,} \hlstr{"SP24/"}\hlstd{),my.stations}\hlopt{$}\hlstd{ID[i],} \hlstr{".csv.gz"}\hlstd{)),} \hlkwc{header}\hlstd{=}\hlnum{FALSE}\hlstd{))}
+\hlkwd{assign}\hlstd{(}\hlkwd{paste0}\hlstd{(}\hlstr{"station"}\hlstd{, i),}
+       \hlkwd{read.csv}\hlstd{(}\hlkwd{gzfile}\hlstd{(}\hlkwd{paste0}\hlstd{(here}\hlopt{::}\hlkwd{here}\hlstd{(}\hlstr{"04_Regional_Climate_Trends"}\hlstd{,}
+            \hlstr{"Data"}\hlstd{,} \hlstr{"SP24/"}\hlstd{),my.stations}\hlopt{$}\hlstd{ID[i],} \hlstr{".csv.gz"}\hlstd{)),}
+            \hlkwc{header}\hlstd{=}\hlnum{FALSE}\hlstd{))}
 
 \hlcom{# can't get the header named in loop! Grrr...}
 \hlcom{#names(paste0("station",i)) <- c("ID", "DATE", "ELEMENT", }
 \hlcom{# "VALUE", "M-FLAG", "Q-FLAG", "S-FLAG", "OBS-TIME")}
 
-\hlstd{\}}
+\hlstd{\}} \hlcom{# LOOP END}
 \end{alltt}
 \begin{verbatim}
 ## [1] 1
@@ -155,6 +186,7 @@ This uses the stations.active.oldest file to download the data from the NOAA web
 ## [1] 5
 \end{verbatim}
 \begin{alltt}
+\hlcom{# Fix Variable Names based on NOAA Documentation}
 \hlkwd{names}\hlstd{(station1)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"ID"}\hlstd{,} \hlstr{"DATE"}\hlstd{,} \hlstr{"ELEMENT"}\hlstd{,} \hlstr{"VALUE"}\hlstd{,}
                      \hlstr{"M-FLAG"}\hlstd{,} \hlstr{"Q-FLAG"}\hlstd{,} \hlstr{"S-FLAG"}\hlstd{,} \hlstr{"OBS-TIME"}\hlstd{)}
 \hlkwd{names}\hlstd{(station3)} \hlkwb{<-} \hlkwd{names}\hlstd{(station2)} \hlkwb{<-} \hlkwd{names}\hlstd{(station1)}
@@ -234,17 +266,17 @@ First, I tested each line on station1. I will then create a function to clean th
 \hlstd{station1.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH} \hlopt{+} \hlstd{YEAR,}
                    \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(station1, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
 
-\hlcom{# create baseline dataset}
-\hlstd{station1.baseline} \hlkwb{=} \hlkwd{subset}\hlstd{(station1,}
+\hlcom{# create baseline (normals) dataset}
+\hlstd{station1.normals} \hlkwb{=} \hlkwd{subset}\hlstd{(station1,}
                            \hlstd{Ymd} \hlopt{>=} \hlstr{"1961-01-01"} \hlopt{&} \hlstd{Ymd} \hlopt{<=} \hlstr{"1990-12-31"}\hlstd{)}
-\hlstd{station1.baseline.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH,}
-                   \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(station1, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
-\hlkwd{names}\hlstd{(station1.baseline.monthly)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"MONTH"}\hlstd{,} \hlstr{"BASELINE"}\hlstd{)}
+\hlstd{station1.normals.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH,}
+                   \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(station1.normals, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
+\hlkwd{names}\hlstd{(station1.normals.monthly)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"MONTH"}\hlstd{,} \hlstr{"NORMALS"}\hlstd{)}
 
 \hlstd{station1.anomaly} \hlkwb{=} \hlkwd{merge}\hlstd{(station1.monthly,}
-                         \hlstd{station1.baseline.monthly,} \hlkwc{by} \hlstd{=} \hlstr{"MONTH"}\hlstd{)}
+                         \hlstd{station1.normals.monthly,} \hlkwc{by} \hlstd{=} \hlstr{"MONTH"}\hlstd{)}
 \hlstd{station1.anomaly}\hlopt{$}\hlstd{ANOMALY} \hlkwb{=}
-  \hlstd{station1.anomaly}\hlopt{$}\hlstd{VALUE} \hlopt{-} \hlstd{station1.anomaly}\hlopt{$}\hlstd{BASELINE}
+  \hlstd{station1.anomaly}\hlopt{$}\hlstd{VALUE} \hlopt{-} \hlstd{station1.anomaly}\hlopt{$}\hlstd{NORMALS}
 \end{alltt}
 \end{kframe}
 \end{knitrout}
@@ -263,12 +295,12 @@ Function is probably senstive to missing values, need to work on that!
   \hlstd{x}\hlopt{$}\hlstd{YEAR} \hlkwb{=} \hlkwd{as.numeric}\hlstd{(}\hlkwd{format}\hlstd{(x}\hlopt{$}\hlstd{Ymd,} \hlstr{"%Y"}\hlstd{))}
   \hlstd{x.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH} \hlopt{+} \hlstd{YEAR,}
                    \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(x, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
-  \hlstd{x.baseline} \hlkwb{=} \hlkwd{subset}\hlstd{(x, Ymd} \hlopt{>=} \hlstr{"1961-01-01"} \hlopt{&} \hlstd{Ymd} \hlopt{<=} \hlstr{"1990-12-31"}\hlstd{)}
-  \hlstd{x.baseline.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH,}
-                   \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(x, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
-  \hlkwd{names}\hlstd{(x.baseline.monthly)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"MONTH"}\hlstd{,} \hlstr{"BASELINE"}\hlstd{)}
-  \hlstd{x.anomaly} \hlkwb{=} \hlkwd{merge}\hlstd{(x.monthly, x.baseline.monthly,} \hlkwc{by} \hlstd{=} \hlstr{"MONTH"}\hlstd{)}
-  \hlstd{x.anomaly}\hlopt{$}\hlstd{ANOMALY} \hlkwb{=} \hlstd{x.anomaly}\hlopt{$}\hlstd{VALUE} \hlopt{-} \hlstd{x.anomaly}\hlopt{$}\hlstd{BASELINE}
+  \hlstd{x.normals} \hlkwb{=} \hlkwd{subset}\hlstd{(x, Ymd} \hlopt{>=} \hlstr{"1961-01-01"} \hlopt{&} \hlstd{Ymd} \hlopt{<=} \hlstr{"1990-12-31"}\hlstd{)}
+  \hlstd{x.normals.monthly} \hlkwb{=} \hlkwd{aggregate}\hlstd{(VALUE} \hlopt{~} \hlstd{MONTH,}
+                   \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(x.normals, ELEMENT} \hlopt{==} \hlstr{"TMAX"}\hlstd{), mean)}
+  \hlkwd{names}\hlstd{(x.normals.monthly)} \hlkwb{<-} \hlkwd{c}\hlstd{(}\hlstr{"MONTH"}\hlstd{,} \hlstr{"NORMALS"}\hlstd{)}
+  \hlstd{x.anomaly} \hlkwb{=} \hlkwd{merge}\hlstd{(x.monthly, x.normals.monthly,} \hlkwc{by} \hlstd{=} \hlstr{"MONTH"}\hlstd{)}
+  \hlstd{x.anomaly}\hlopt{$}\hlstd{ANOMALY} \hlkwb{=} \hlstd{x.anomaly}\hlopt{$}\hlstd{VALUE} \hlopt{-} \hlstd{x.anomaly}\hlopt{$}\hlstd{NORMALS}
   \hlkwd{return}\hlstd{(x.anomaly)}
 \hlstd{\}}
 \end{alltt}
@@ -287,27 +319,32 @@ So far, I have only run function for 1 station, but I suspect you can figure out
 \end{kframe}
 \end{knitrout}
 
-\subsection{Plot Anomoly}
+\subsection{Plot Anomaly}
+
+Graphic has lots of issues. more next time!  But here's a start.
 
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 \begin{alltt}
+\hlkwd{options}\hlstd{(}\hlkwc{scipen}\hlstd{=}\hlnum{5}\hlstd{)}
+\hlkwd{par}\hlstd{(}\hlkwc{mar}\hlstd{=}\hlkwd{c}\hlstd{(}\hlnum{4}\hlstd{,}\hlnum{6}\hlstd{,}\hlnum{2}\hlstd{,}\hlnum{5}\hlstd{))}
+
 \hlkwd{plot}\hlstd{(ANOMALY} \hlopt{~} \hlstd{YEAR,} \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(station1.TMAX, MONTH} \hlopt{==} \hlnum{1}\hlstd{),}
-     \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{pch}\hlstd{=}\hlnum{19}\hlstd{,} \hlkwc{col} \hlstd{=} \hlstr{"blue"}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{.5}\hlstd{,} \hlkwc{xlab} \hlstd{=} \hlstr{"Year"}\hlstd{,}
+     \hlkwc{las}\hlstd{=}\hlnum{1}\hlstd{,} \hlkwc{pch}\hlstd{=}\hlnum{19}\hlstd{,} \hlkwc{col} \hlstd{=} \hlstr{"blue"}\hlstd{,} \hlkwc{cex}\hlstd{=}\hlnum{.5}\hlstd{,} \hlcom{#xlab = "Year", }
      \hlkwc{ylab} \hlstd{=} \hlstr{"Maximum Temp Anomaly (C)"}\hlstd{,}
      \hlkwc{main}\hlstd{=}\hlstr{"January Maximum Temp Anomaly"}\hlstd{)}
+\hlkwd{mtext}\hlstd{(}\hlstr{"Maximum Temp Anomaly (C)"}\hlstd{,} \hlkwc{side} \hlstd{=} \hlnum{2}\hlstd{,} \hlkwc{line} \hlstd{=} \hlnum{3}\hlstd{)}
 \hlstd{temp.lm} \hlkwb{=} \hlkwd{lm}\hlstd{(ANOMALY} \hlopt{~} \hlstd{YEAR,} \hlkwc{data} \hlstd{=} \hlkwd{subset}\hlstd{(station1.TMAX, MONTH} \hlopt{==} \hlnum{1}\hlstd{))}
 \hlkwd{abline}\hlstd{(}\hlkwd{coef}\hlstd{(temp.lm),} \hlkwc{col} \hlstd{=} \hlstr{"red"}\hlstd{)}
 \end{alltt}
 \end{kframe}
-\includegraphics[width=\maxwidth]{figure/unnamed-chunk-8-1} 
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-10-1} 
 \end{knitrout}
 
 
 \section{Next Steps}
 
 This is all we need to do so far. Next week, we'll look at different way to visualize the data!
-
 
 
 \end{document}
