--- a/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
+++ b/04_Regional_Climate_Trends/Guides/1_Obtaining_State_Weather_Data.tex
@@ -347,4 +347,11 @@ Graphic has lots of issues. more next time!  But here's a start.
 This is all we need to do so far. Next week, we'll look at different way to visualize the data!
 
 
+write.csv(station1.TMAX, file = "station1.TMAX.csv", row.names = FALSE)
+write.csv(station2.TMAX, file = "station2.TMAX.csv", row.names = FALSE)
+write.csv(station3.TMAX, file = "station3.TMAX.csv", row.names = FALSE)
+write.csv(station4.TMAX, file = "station4.TMAX.csv", row.names = FALSE)
+write.csv(station5.TMAX, file = "station5.TMAX.csv", row.names = FALSE)
+
+
 \end{document}
