--- a/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
+++ b/04_Regional_Climate_Trends/Guides/0_Project_Overview_and_Set_Up.Rnw
@@ -1,8 +1,11 @@
 \documentclass{article}
+\usepackage{hyperref}
+\hypersetup{colorlinks=true, linkcolor=blue, filecolor=blue, urlcolor=blue, citecolor=blue}
+
 
 \title{Preparing Regional Weather Data Analysis Project}
 \author{Marc Los Huertos}
-\date{\today~(ver. 0.5)} % without \date command, current date is supplied
+\date{\today~(ver. 0.7)} % without \date command, current date is supplied
 
 \begin{document}
 \maketitle
@@ -16,25 +19,48 @@ Create a public product (video) that explains climate change trends in a state; 
 
 \subsection{Project Stages}
 
-\begin{enumerate}
-  \item Data Collection (Download data from the web and read into R.)
-  \item Data Processing (Clean and organize data for analysis.)
-  \item Data Analysis (Use R to analyze data (means, trends, etc))
-  \item Data Visualization (Create visualizations of data)
-  \item Communicating Project Results (Create a video that explains the data and the results of the analysis.)
-\end{enumerate}
+\begin{description}
+  \item[Project Overview (This Document)] A brief overview of the project and the steps to complete it. In addition, this document, when run selects the oldest active station ID for each state (and territory). Students don not need to run this document, but creates an updated list for them each time it is run. In addition, this document explains some of the R code used to create this list as background information. 
+  \item[Guide 1] Data Collection (Download station data from the web and read into R.)
+  \item[Guide 2] Data Processing (Clean and Pre-process Data)
+  \item[Guide 3] Data Analysis (Use R to analyze data (means, trends, etc))
+  \item[Guide 4] Data Visualization (Create visualizations of data)
+  \item[Guide 5] Communicating Project Results (Create a video that explains the data and the results of the analysis.)
+\end{description}
 
+At this point, I have created a DRAFT visual flow chart that displays each stage. I will be adjusting this chart as we progress and refine the R code and project guides. 
+
+\begin{figure}
+  \caption{A flow chart of the project stages.}
+  \label{fig:flow-chart}
+  \includegraphics[width=1\textwidth]{figure/flow-chart.pdf}
+\end{figure}
+
+
+\section{Selecting US Weather Station with Robust Records}
 
 \subsection{Global Weather Station Data}
 
+The GHCNd is the primary source of weather station data. The data is available from the National Centers for Environmental Information (NCEI) at the following URL: \url{https://www.ncei.noaa.gov/pub/data/ghcn/daily/}. The data is available in a variety of formats, including .csv, .dat, and .txt.
+
+\subsection{Goals for this Document}
+
+This document selects the oldest active weather station for each state (and territory) in the US. The station inventory is available as a .txt file. The file is a fixed width file, which means that each column has a specific width. The file is available at the following URL: \url{https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-inventory.txt}.
+
+But you do not need to follow the steps in this document. This document is for background information only and show how I prepared the list of stations for you to select from. 
+
+Note, it maybe that there are too many missing values in one or more of your stations, then we can use this document to find additional stations, if they exist in the database.
+
 \subsection{Download Station Inventory}
+
+The station inventory is available as a .txt file. The file is a fixed width file, which means that each column has a specific width. The file is available at the following URL: \url{https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-inventory.txt}.
 
 <<echo=TRUE>>=
 library(here)
 # Get Stations Data (Inventory)
 inventory = read.table("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-inventory.txt")
 
-# Define Variable Names
+# Define Variable Names because there is no header in the file
 inventory_names = c("ID", #            1-11   Character
                       "LATITUDE", #     13-20   Real
                       "LONGITUDE", #    22-30   Real
@@ -42,7 +68,7 @@ inventory_names = c("ID", #            1-11   Character
                       "FIRSTYEAR", #    37-40   Integer
                       "LASTYEAR") #     42-45   Integer
 
-# Assign Variable Names
+# Assign Variable Names to inventory dataframe
 names(inventory) = inventory_names
 
 # Check the structure of the data
@@ -50,35 +76,17 @@ str(inventory)
 @
 
 
-
-<<>>=
-library(geodata)
-d <- worldclim_country(country = "USA", var = "tmin",
-                       path = tempdir())
-terra::plot(mean(d), plg = list(title = "Min. temperature (C)"))
-@
-
-
-\subsection{Visualizing of Active Weather Stations with Maximum Daily Temperature Readings}
+\subsection{Selecting Active Weather Stations with Maximum Daily Temperature Readings}
 
 <<echo=TRUE>>=
-
 # Subset data for TMAX  (Max Temperature) Element
 inventory.TMAX = subset(inventory, subset=ELEMENT=="TMAX")
 
+# Check the structure of the data
 str(inventory.TMAX)
 
-#plot(inventory.TMAX$LONGITUDE, inventory.TMAX$LATITUDE)
-
-#plot(inventory.TMAX$LONGITUDE, inventory.TMAX$LATITUDE, pch=20, cex=.4)
-
-# Selective ~Active Stations
-
+# Subset Active Stations (observations that include 2022 and more recent)
 inventory.TMAX = subset(inventory.TMAX, subset=LASTYEAR>=2022); str(inventory.TMAX)
-
-#plot(inventory.TMAX$LONGITUDE, inventory.TMAX$LATITUDE, pch=20, cex=.4, xlab="Long", ylab="Lat", las=1)
-
-#par(mfrow=c(2,2))
 @
 
 \begin{figure}
@@ -93,24 +101,11 @@ points(LATITUDE~LONGITUDE, data=subset(inventory.TMAX, subset=FIRSTYEAR<=1773), 
 @
 \end{figure}
 
-\section{Creating Up-to-Date Weather Datasets}
+\subsection{Using the GHCND-station Dataset to Select US Stations}
 
-To prepare for the project, we need to accomplish two things: 
+The inventory has a list of stations and map coordinates (latitude and longitude). However, it's not easy to select a region, like a state, from the latitude and longitude values. Thus, we need to merge the inventory with a dataset that includes state names and merge them based on the station ID. 
 
-\begin{enumerate}
-  \item Select a region, i.e. State, of interest
-  \item Read in the most recent EPA information on the state.
-\end{enumerate}
-
-\section{Updated Station Selection Dataset}
-
-\subsection{Download Recent}
-
-\subsection{States in GHCND-station Dataset}
-
-The inventory has a list of stations and map coordinates (latitude and longitude). However, it's not easy to select a region, like a state, from the inventory. Thus, we need to merge the inventory with a dataset that includes state names.
-
-It's a bit strange, but the dataset includes US states and Canadian Provinces, plus various territories of the US. 
+It's a bit strange, but the dataset, GHCNd includes US states and Canadian Provinces, plus various territories of the US. 
 
 <<>>=
 station_names = c("ID",             #  1-11   Character   11
@@ -124,30 +119,32 @@ station_names = c("ID",             #  1-11   Character   11
                   "WMO ID"          # 81-85   Character
                    )
 
-Stations = read.fwf("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt", col.names=station_names, fill=2,
+# Read ghcnd-stations.txt with fixed width format
+Stations = read.fwf("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-stations.txt", 
+        col.names=station_names, fill=2,
         widths=c(11, -1, 8, -1, 9, -1, 6, -1, 2, -1, 30, -1, 3, -1, 3, -1, 5 ))
 
 # NOTE: Got to be a better way to get these data!
 
 str(Stations) # Missing State Name
 
-# Read ghcnd-states.txt
-
+# Now we'll get the state names for the states.
+States = read.fwf("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-states.txt", 
+                  col.names=State_names, fill=2, 
+                  widths=c(2, -1, 46))
 State_names = c("STATE", #         1-2    Character 2
                 "STATE_NAME") #         4-50    Character 46
-
-
-States = read.fwf("https://www.ncei.noaa.gov/pub/data/ghcn/daily/ghcnd-states.txt", col.names=State_names, fill=2, widths=c(2, -1, 46))
-
-
 str(States)
+
+# Merge the two datasets
 StateIDs = subset(Stations, select=c("ID", "STATE"))
 StateIDs = merge(StateIDs, States, by="STATE") # Add State Names
 
 temp.TMAX = merge(inventory.TMAX, StateIDs, by="ID")
 # Note: Some outer join would be better, to be completed later.
 
-stations.USCan = subset(temp.TMAX, subset=(STATE!="  ")) # Remove Stations that STATE = blank!
+# Remove Stations that STATE = blank!
+stations.USCan = subset(temp.TMAX, subset=(STATE!="  ")) 
 @
 
 \subsection{Select Active Stations}
@@ -159,7 +156,7 @@ str(stations.active)
 nrow(stations.active)
 @
 
-\subsection{Select 5 Stations for Each State}
+\subsection{Select Upto 5 Stations for Each State}
 
 To accomplish this, I need to do a loop to select the first 5 stations for each state.
 
@@ -189,7 +186,7 @@ plot(stations.active.oldest$LONGITUDE, stations.active.oldest$LATITUDE, pch=20, 
 
 \subsection{Next Steps}
 
-
+In Guide \#1, we'll use the stations.active.oldest dataset to download the daily temperature and precipitation data for the ``oldest, active stations".
 <<>>=
 # export file to csv
 write.csv(stations.active.oldest, here("04_Regional_Climate_Trends", "stations.active.oldest.csv"))
